# gameskel

src/: CMakeLists.txt
src/games/: CMakeLists.txt  example_animation.cc  example_particles.cc  main.cc
src/include/game/: Bonus.h  Clock.h  Element.h  Entity.h  Events.h  Level.h  Param.h  Particle.h  Player.h  Score.h  World.h  WorldListener.h
src/lib/: Bonus.cc  CMakeLists.txt  Clock.cc  Element.cc  Entity.cc  Level.cc  Particle.cc  Player.cc  Score.cc  World.cc  WorldListener.cc
